<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="huzevka.lunchfriends.activity.MainActivity">


	<com.google.android.gms.common.SignInButton
		android:id="@+id/google_sign_in_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="32dp"
		android:layout_marginTop="50dp"/>

	<com.facebook.login.widget.LoginButton
		android:id="@+id/fb_login_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="62dp"
		android:layout_toRightOf="@id/google_sign_in_button"
		android:layout_marginLeft="10dp"/>

	<TextView
		android:id="@+id/passwordText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/userIdText"
		android:layout_marginRight="10dp"
		android:layout_toLeftOf="@id/passwordEdit"
		android:layout_alignBaseline="@id/passwordEdit"
		android:text="@string/password_colon"/>

	<EditText
		android:id="@+id/userIdEdit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/passwordEdit"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="20dp"
		android:layout_toEndOf="@id/userIdText"
		android:ems="10"
		android:inputType="textPersonName"/>

	<EditText
		android:id="@+id/passwordEdit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/loginButton"
		android:layout_alignStart="@id/userIdEdit"
		android:layout_marginBottom="20dp"
		android:ems="10"
		android:inputType="textPassword"/>

	<Button
		android:id="@+id/loginButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="187dp"
		android:text="@string/log_in"/>

	<TextView
		android:id="@+id/userIdText"
		android:layout_width="49dp"
		android:layout_height="21dp"
		android:layout_alignParentStart="true"
		android:layout_marginStart="46dp"
		android:layout_above="@id/loginButton"
		android:layout_alignBaseline="@id/userIdEdit"
		android:text="@string/userid_colon"/>

	<Button
		android:id="@+id/registerButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="40dp"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="68dp"
		android:text="@string/register"/>

	<Button
		android:id="@+id/changeLanguageButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_marginStart="40dp"
		android:layout_alignBaseline="@+id/registerButton"
		android:text="@string/change_language"/>


</RelativeLayout>
