<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.ChangeLanguageActivity">


	<Button
		android:id="@+id/englishButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="202dp"
		android:layout_alignParentStart="true"
		android:layout_marginStart="80dp"
		android:text="@string/english"/>

	<Button
		android:id="@+id/czechButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignTop="@+id/englishButton"
		android:layout_marginEnd="80dp"
		android:text="@string/czech"/>

	<Button
		android:id="@+id/languageBackButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="130dp"
		android:text="@string/back"/>


</RelativeLayout>