<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.RegisterResultActivity">

	<TextView
		android:id="@+id/registeredText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginTop="139dp"
		android:textSize="20dp"
		android:text="@string/registering_please_wait"/>

	<Button
		android:id="@+id/backButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/registeredText"
		android:layout_marginTop="80dp"
		android:layout_centerInParent="true"
		android:text="@string/back"/>


</RelativeLayout>